syntax = "proto3";

package greet;

option go_package = "github.com/Mitanshk01/Tutorial-2/Example-1/protofiles";

service GreetService {
    rpc GreetRPC (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string response = 1;
}
